...
                                            </constraints>
                                        </tableViewCellContentView>
                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <connections>
                                            <outlet property="cellImage" destination="nKa-LA-Ff4" id="OUs-3W-O57"/>
                                            <outlet property="dateLabel" destination="nMl-Jf-hGh" id="oYo-H1-qbF"/>
                                            <outlet property="likeButton" destination="fIE-q6-B2o" id="00W-HE-rTa"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                                <connections>
                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="lbK-rw-SC2"/>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="eNb-lj-mtO"/>
...
                                    <constraint firstAttribute="height" constant="60" id="SBX-Rf-g8D"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bCA-Um-1SV">
                                <rect key="frame" x="16" y="690" width="382" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="vun-1r-JcA"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <color key="tintColor" name="YP Black"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
                                <rect key="frame" x="8" y="40" width="48" height="48"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="WRh-6X-Kvd"/>
                                    <constraint firstAttribute="width" constant="48" id="g8k-VQ-sxr"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="BackButtonWhite"/>
                                <connections>
                                    <action selector="didTapBackButton" destination="0Zi-rw-0Q3" eventType="touchUpInside" id="RLy-tt-S5W"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mhL-aN-9Jv" userLabel="Share Button">
                                <rect key="frame" x="182" y="795" width="50" height="50"/>
...
            </objects>
            <point key="canvasLocation" x="2807" y="-765"/>
        </scene>
        <!--Web View View Controller-->
        <scene sceneID="Xhc-CM-gCL">
            <objects>
                <viewController restorationIdentifier="UnsplashWebView" storyboardIdentifier="WebViewViewController" id="fJO-qo-Ehz" customClass="WebViewViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="Pzf-li-QvZ">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <wkWebView contentMode="scaleToFill" restorationIdentifier="UnsplashWebView" translatesAutoresizingMaskIntoConstraints="NO" id="bpc-NW-Xpg">
                                <rect key="frame" x="0.0" y="140" width="414" height="756"/>
...
